# camera_pose_estimation

./: README.txt
src/camera_pose_estimation/: CMakeLists.txt  package.xml
src/camera_pose_estimation/launch/: pose_estimation.launch
src/camera_pose_estimation/src/: check_version.cpp  main.cpp  rgb_pose_estimation.cpp  rgb_pose_estimation.hpp
